# htmx-axum-maud

./: .env.example  Cargo.toml  README.md  db_dump.sql  docker-compose.yaml  rustfmt.toml
.keycloak/imports/: realm-export.json
migrations/: 20240121182711_initial.sql  20240127182750_create_user.sql
src/: article.rs  auth.rs  base.rs  config.rs  main.rs  user.rs
src/article/: article_controller.rs  mod.rs
